--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <title>Lambda School Newsfeed</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./CSS/index.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+
     <script src="./Menu/Menu.js" async></script>
     <script src="./Article/Article.js" async></script>
   </head>
@@ -109,6 +111,28 @@
           hodor hodor hodor? Hodor, hodor. Hodor. Hodor, hodor - HODOR hodor, hodor hodor hodor! Hodor, hodor. Hodor. Hodor, HODOR
           hodor, hodor hodor, hodor, hodor hodor. Hodor hodor - hodor - hodor... Hodor hodor hodor hodor hodor hodor hodor?! Hodor
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
+        <span class='expandButton'></span>
+      </div>
+      <div class="article">
+        <h2>Jimmy Consulting</h2>
+        <p class="date">Nov 7th, 2017</p>
+        <p>Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+        </p>
+        
+        <p>Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting </p>
+        
+        <p>Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          </p>
+
+        <p>Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultnsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting
+          Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting </p>
         <span class='expandButton'></span>
       </div>
     </div>
