added a form to add new articles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 
     <script src="./Menu/Menu.js" async></script>
+    <script src="./create/create.js" async></script>
     <script src="./Article/Article.js" async></script>
   </head>
   <body>
@@ -135,6 +136,12 @@
           Jimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy ConsultingJimmy Consulting </p>
         <span class='expandButton'></span>
       </div>
+
+    </div>
+    <div class='new-article'>
+      <p>Title: <input id='title' type="text" /></p>
+      <p>Article: <input id='article' type="text"></p>
+      <p> <input id="submit" type="submit"></p>
     </div>
   </body>
 </html>
